# nclimgrid-archive

./: .gitignore  CHANGELOG.md  LICENSE  README-template.md  README.md  ZZ-DataAndRequirements.md  ZZ-test_collection.py  environment.yml  mypy.ini  questions.md  setup.cfg  test_collection.py
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
examples/daily/: collection.json
examples/daily/202201-grd-prelim-01/: 202201-grd-prelim-01.json
examples/monthly/: collection.json
examples/monthly/nclimgrid-189501/: nclimgrid-189501.json
scripts/: lint
src/stactools/nclimgrid/: __init__.py  cog.py  commands.py  constants.py  constants_v2.py  daily_stac.py  errors.py  (+5 more)
test_cogs/: nclimgrid-prcp-189501.tif  nclimgrid-prcp-189502.tif  nclimgrid-tavg-189501.tif  nclimgrid-tavg-189502.tif  nclimgrid-tmax-189501.tif  nclimgrid-tmax-189502.tif  nclimgrid-tmin-189501.tif  nclimgrid-tmin-189502.tif  prcp-202201-grd-prelim-01.tif  prcp-202206-grd-prelim-24.tif  prcp-202206-grd-prelim-25.tif  prcp-202206-grd-prelim-26.tif  prcp-202206-grd-prelim-27.tif  tavg-202201-grd-prelim-01.tif  tavg-202206-grd-prelim-24.tif  tavg-202206-grd-prelim-25.tif  tavg-202206-grd-prelim-26.tif  tavg-202206-grd-prelim-27.tif  tmax-202201-grd-prelim-01.tif  tmax-202206-grd-prelim-25.tif  tmax-202206-grd-prelim-26.tif  tmax-202206-grd-prelim-27.tif  tmin-202201-grd-prelim-01.tif  tmin-202206-grd-prelim-25.tif  tmin-202206-grd-prelim-26.tif  tmin-202206-grd-prelim-27.tif
tests/: test_commands.py  test_daily_stac.py  test_module.py  test_monthly_stac.py  test_stac.py  test_stac_v2.py
(+4 files in other folders)
