[metadata]
name = stactools-nclimgrid
version = attr: stactools.nclimgrid.__version__
description = Create STAC Items and Collections for NOAA C-CAP data
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/nclimgrid
project_urls =
    Documentation = https://stactools-nclimgrid.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/nclimgrid/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools @ git+https://github.com/stac-utils/stactools.git
    xarray
    netCDF4

[options.packages.find]
where = src
